--- a/Home.html
+++ b/Home.html
@@ -1,2 +1,10 @@
 <!DOCTYPE html>
-<html><head><meta charset="utf-8"><meta http-equiv="refresh" content="0;url=./"></head><body></body></html>
+<html>
+  <head>
+  <meta charset="utf-8"><meta http-equiv="refresh" content="0;url=./">
+  <link rel="icon" type="image/png" href="favicon.png">
+</head>
+  <body>
+    
+  </body>
+</html>
