--- a/Page-1.html
+++ b/Page-1.html
@@ -23,7 +23,9 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Page 1">
     <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+  <meta data-intl-tel-input-cdn-path="intlTelInput/">
+ <link rel="icon" type="image/png" href="favicon.png">
+</head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en"><header class="u-clearfix u-custom-color-8 u-header u-header" id="header"></header>
     <section class="u-clearfix u-custom-color-8 u-section-1" id="block-2">
       <div class="u-clearfix u-sheet u-sheet-1">
@@ -70,13 +72,5 @@
         <h3 class="u-custom-font u-font-playfair-display u-text u-text-2">K vytvoření této stránky byli použity následující umělé inteligence: chatgpt.com, ​perchance.org</h3>
         <span class="u-file-icon u-icon u-text-white u-icon-2" data-href="https://youtube.com/" data-target="_blank"><img src="images/3820269-1885a068.png" alt=""></span>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <p class="u-text">
-        <span>This site was created with the </span>
-        <a class="u-link" href="https://nicepage.com/" target="_blank" rel="nofollow">
-          <span>Nicepage</span>
-        </a>
-      </p>
-    </section>
   
 </body></html>
