--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="KLOBÁSA UZENÁ​, Báječná pochutina​, Grilované ve Švýcarsku​, Vikingský původ​, Tajná přísada​">
     <meta name="description" content="">
-    <title>Home</title>
+    <title>main</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="index.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
